# shelflog

./: .gitignore  README.md  db.sqlite3  pyproject.toml
.zed/: settings.json
config/: settings.py  urls.py
media/: admin.py  models.py  urls.py  views.py
media/migrations/: 0001_initial.py
media/templates/media/: album_list.html  base.html  book_list.html  film_list.html
